cmake_minimum_required(VERSION 3.10)
project(ndnrtc)

set(CMAKE_CXX_STANDARD 11)

include_directories(cpp/client/src)
include_directories(cpp/include)
include_directories(cpp/src)
include_directories(cpp/tests)
include_directories(cpp/tests/mock-objects)

add_executable(ndnrtc
        cpp/client/src/client.cpp
        cpp/client/src/client.hpp
        cpp/client/src/config.cpp
        cpp/client/src/config.hpp
        cpp/client/src/frame-io.cpp
        cpp/client/src/frame-io.hpp
        cpp/client/src/ipc-shim.c
        cpp/client/src/ipc-shim.h
        cpp/client/src/key-chain-manager.cpp
        cpp/client/src/key-chain-manager.hpp
        cpp/client/src/main.cpp
        cpp/client/src/precise-generator.cpp
        cpp/client/src/precise-generator.hpp
        cpp/client/src/renderer.cpp
        cpp/client/src/renderer.hpp
        cpp/client/src/stat-collector.cpp
        cpp/client/src/stat-collector.hpp
        cpp/client/src/stream.hpp
        cpp/client/src/video-source.cpp
        cpp/client/src/video-source.hpp
        cpp/extra/benchmark-local-stream.cc
        cpp/extra/benchmark-remote-stream.cc
        cpp/include/c-wrapper.h
        cpp/include/error-codes.hpp
        cpp/include/interfaces.hpp
        cpp/include/local-stream.hpp
        cpp/include/name-components.hpp
        cpp/include/ndnrtc-common.hpp
        cpp/include/ndnrtc-defines.hpp
        cpp/include/params.hpp
        cpp/include/remote-stream.hpp
        cpp/include/simple-log.hpp
        cpp/include/statistics.hpp
        cpp/include/stream.hpp
        cpp/src/arc.cpp
        cpp/src/arc.hpp
        cpp/src/async.cpp
        cpp/src/async.hpp
        cpp/src/audio-capturer.cpp
        cpp/src/audio-capturer.hpp
        cpp/src/audio-controller.cpp
        cpp/src/audio-controller.hpp
        cpp/src/audio-playout-impl.cpp
        cpp/src/audio-playout-impl.hpp
        cpp/src/audio-playout.cpp
        cpp/src/audio-playout.hpp
        cpp/src/audio-renderer.cpp
        cpp/src/audio-renderer.hpp
        cpp/src/audio-stream-impl.cpp
        cpp/src/audio-stream-impl.hpp
        cpp/src/audio-thread.cpp
        cpp/src/audio-thread.hpp
        cpp/src/av-sync.cpp
        cpp/src/av-sync.hpp
        cpp/src/buffer-control.cpp
        cpp/src/buffer-control.hpp
        cpp/src/c-wrapper.cpp
        cpp/src/clock.cpp
        cpp/src/clock.hpp
        cpp/src/data-validator.cpp
        cpp/src/data-validator.hpp
        cpp/src/drd-estimator.cpp
        cpp/src/drd-estimator.hpp
        cpp/src/estimators.cpp
        cpp/src/estimators.hpp
        cpp/src/face-processor.cpp
        cpp/src/face-processor.hpp
        cpp/src/fec.cpp
        cpp/src/fec.hpp
        cpp/src/frame-buffer.cpp
        cpp/src/frame-buffer.hpp
        cpp/src/frame-converter.cpp
        cpp/src/frame-converter.hpp
        cpp/src/frame-data.cpp
        cpp/src/frame-data.hpp
        cpp/src/interest-control.cpp
        cpp/src/interest-control.hpp
        cpp/src/interest-queue.cpp
        cpp/src/interest-queue.hpp
        cpp/src/jitter-timing.cpp
        cpp/src/jitter-timing.hpp
        cpp/src/latency-control.cpp
        cpp/src/latency-control.hpp
        cpp/src/local-stream.cpp
        cpp/src/media-stream-base.cpp
        cpp/src/media-stream-base.hpp
        cpp/src/meta-fetcher.cpp
        cpp/src/meta-fetcher.hpp
        cpp/src/name-components.cpp
        cpp/src/ndnrtc-debug.hpp
        cpp/src/ndnrtc-endian.hpp
        cpp/src/ndnrtc-object.cpp
        cpp/src/ndnrtc-object.hpp
        cpp/src/ndnrtc-testing.hpp
        cpp/src/packet-publisher.cpp
        cpp/src/packet-publisher.hpp
        cpp/src/periodic.cpp
        cpp/src/periodic.hpp
        cpp/src/pipeline-control-state-machine.cpp
        cpp/src/pipeline-control-state-machine.hpp
        cpp/src/pipeline-control.cpp
        cpp/src/pipeline-control.hpp
        cpp/src/pipeliner.cpp
        cpp/src/pipeliner.hpp
        cpp/src/playout-control.cpp
        cpp/src/playout-control.hpp
        cpp/src/playout-impl.cpp
        cpp/src/playout-impl.hpp
        cpp/src/playout.cpp
        cpp/src/playout.hpp
        cpp/src/rate-adaptation-module.hpp
        cpp/src/remote-audio-stream.cpp
        cpp/src/remote-audio-stream.hpp
        cpp/src/remote-stream-impl.cpp
        cpp/src/remote-stream-impl.hpp
        cpp/src/remote-stream.cpp
        cpp/src/remote-video-stream.cpp
        cpp/src/remote-video-stream.hpp
        cpp/src/renderer.hpp
        cpp/src/rtx-controller.cpp
        cpp/src/rtx-controller.hpp
        cpp/src/sample-estimator.cpp
        cpp/src/sample-estimator.hpp
        cpp/src/sample-validator.cpp
        cpp/src/sample-validator.hpp
        cpp/src/segment-controller.cpp
        cpp/src/segment-controller.hpp
        cpp/src/segment-fetcher.cpp
        cpp/src/segment-fetcher.hpp
        cpp/src/simple-log.cpp
        cpp/src/slot-buffer.cpp
        cpp/src/slot-buffer.hpp
        cpp/src/statistics.cpp
        cpp/src/stream.cpp
        cpp/src/threading-capability.cpp
        cpp/src/threading-capability.hpp
        cpp/src/video-coder.cpp
        cpp/src/video-coder.hpp
        cpp/src/video-decoder.cpp
        cpp/src/video-decoder.hpp
        cpp/src/video-playout-impl.cpp
        cpp/src/video-playout-impl.hpp
        cpp/src/video-playout.cpp
        cpp/src/video-playout.hpp
        cpp/src/video-stream-impl.cpp
        cpp/src/video-stream-impl.hpp
        cpp/src/video-thread.cpp
        cpp/src/video-thread.hpp
        cpp/src/webrtc-audio-channel.cpp
        cpp/src/webrtc-audio-channel.hpp
        cpp/src/webrtc.hpp
        cpp/tests/mock-objects/audio-capturer-mock.hpp
        cpp/tests/mock-objects/audio-sample-consumer-mock.hpp
        cpp/tests/mock-objects/audio-thread-callback-mock.hpp
        cpp/tests/mock-objects/buffer-control-observer-mock.hpp
        cpp/tests/mock-objects/buffer-mock.hpp
        cpp/tests/mock-objects/buffer-observer-mock.hpp
        cpp/tests/mock-objects/drd-estimator-observer-mock.hpp
        cpp/tests/mock-objects/encoder-delegate-mock.hpp
        cpp/tests/mock-objects/external-capturer-mock.hpp
        cpp/tests/mock-objects/external-renderer-mock.hpp
        cpp/tests/mock-objects/interest-control-mock.hpp
        cpp/tests/mock-objects/interest-queue-mock.hpp
        cpp/tests/mock-objects/interest-queue-observer-mock.hpp
        cpp/tests/mock-objects/latency-control-mock.hpp
        cpp/tests/mock-objects/latency-control-observer-mock.hpp
        cpp/tests/mock-objects/ndn-cpp-mock.hpp
        cpp/tests/mock-objects/pipeline-control-state-machine-observer-mock.hpp
        cpp/tests/mock-objects/pipeliner-mock.hpp
        cpp/tests/mock-objects/playback-queue-mock.hpp
        cpp/tests/mock-objects/playback-queue-observer-mock.hpp
        cpp/tests/mock-objects/playout-control-mock.hpp
        cpp/tests/mock-objects/playout-mock.hpp
        cpp/tests/mock-objects/playout-observer-mock.hpp
        cpp/tests/mock-objects/rtx-observer-mock.hpp
        cpp/tests/mock-objects/segment-controller-mock.hpp
        cpp/tests/mock-objects/segment-controller-observer-mock.hpp
        cpp/tests/mock-objects/slot-buffer-mock.hpp
        cpp/tests/mock-objects/stream-mock.hpp
        cpp/tests/mock-objects/video-playout-consumer-mock.hpp
        cpp/tests/test-async.cc
        cpp/tests/test-audio-capturer.cc
        cpp/tests/test-audio-playout.cc
        cpp/tests/test-buffer-control.cc
        cpp/tests/test-client-params.cc
        cpp/tests/test-client.cc
        cpp/tests/test-config-load.cc
        cpp/tests/test-data-validator.cc
        cpp/tests/test-drd-estimator.cc
        cpp/tests/test-estimators.cc
        cpp/tests/test-frame-buffer.cc
        cpp/tests/test-frame-converter.cc
        cpp/tests/test-frame-io.cc
        cpp/tests/test-generator.cc
        cpp/tests/test-interest-control.cc
        cpp/tests/test-interest-queue.cc
        cpp/tests/test-latency-control.cc
        cpp/tests/test-local-media-stream.cc
        cpp/tests/test-loop.cc
        cpp/tests/test-media-thread.cc
        cpp/tests/test-name-components.cc
        cpp/tests/test-network-data.cc
        cpp/tests/test-packet-publisher.cc
        cpp/tests/test-params.cc
        cpp/tests/test-periodic.cc
        cpp/tests/test-pipeline-control-state-machine.cc
        cpp/tests/test-pipeline-control.cc
        cpp/tests/test-pipeliner.cc
        cpp/tests/test-playout-control.cc
        cpp/tests/test-playout.cc
        cpp/tests/test-renderer.cc
        cpp/tests/test-rtx-controller.cc
        cpp/tests/test-sample-estimator.cc
        cpp/tests/test-segment-controller.cc
        cpp/tests/test-stat-collector.cc
        cpp/tests/test-video-coder.cc
        cpp/tests/test-video-decoder.cc
        cpp/tests/test-video-playout.cc
        cpp/tests/test-video-source.cc
        cpp/tests/test-webrtc-audio-channel.cc
        cpp/tests/tests-client.cc
        cpp/tests/tests-helpers.cc
        cpp/tests/tests-helpers.hpp)
